add people to hangouts
