# Backend/SocialCoordinationApp/Models/DTOs/Requests/AddHangoutAttendeesRequest.cs
@@ -1,0 +1,7 @@
+namespace SocialCoordinationApp.Models.DTOs.Requests;
+
+public class AddHangoutAttendeesRequest
+{
+    public List<string>? InvitedGroupIds { get; set; }
+    public List<string>? InviteeUserIds { get; set; }
+}
